<?xml version="1.0" encoding="utf-8"?><!--
MIT License

Copyright (c) 2020 Palmtree Software

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
-->
<resources>
    <string name="app_name">DigitalClock</string>

    <string name="default_date_format">E, MMM dd</string>
    <string name="default_foreground_color" translatable="false">#FFFFFF</string>

    <string name="config_date_format_label">Date format</string>
    <string name="config_add_widget_button">Add widget</string>
    <string name="config_ok_button">OK</string>
    <string name="config_cancel_button">Cancel</string>
    <string name="config_foreground_color_label">Foreground color</string>
    <string name="config_preview_button">Preview</string>
    <string name="config_reset_button">Reset</string>
    <string name="config_foreground_color_error">Input color code (e.g. &quot;#87CEEB&quot; or &quot;skyblue&quot;)</string>
    <string name="config_foreground_color_hint">e.g. &quot;#87CEEB&quot; or &quot;skyblue&quot;</string>
    <string name="config_date_format_hint">e.g. &quot;E, MMM dd&quot;</string>
    <string name="config_date_format_error">Input date format text (e.g. &quot;E, MMM dd&quot;)</string>
    <string name="config_previewregion_label">Display example</string>
    <string name="config_previewregion_hour_minute_format" translatable="false">%02d:%02d</string>
    <string name="config_previewregion_second_format" translatable="false">:%02d</string>
    <string name="config_time_zone_label">Time zone</string>
    <string name="config_timezone_bynumber_gmt_label">GMT</string>

    <string name="globalconfig_onlickaction_label">Select action on touching widget</string>
    <string name="globalconfig_onlickaction_configure_button">Launch widget configuration activity</string>
    <string name="globalconfig_onlickaction_googleclock_button">Launch digital clock application</string>
    <string name="globalconfig_cancel_button">Cancel</string>
    <string name="globalconfig_ok_button">OK</string>
    <string name="globalconfig_onclickaction_warning">If more than one widget is displayed, changing this setting will apply to all widgets.</string>

    <!-- AppWidgetTimeZone.mapTimeZoneIdToResourceId() も一緒に更新すること  -->
    <string name="time_zone_short_name_DEFAULT" translatable="false" />
    <string name="time_zone_short_name_GMT">GMT</string>
    <string name="time_zone_short_name_JST">JST</string>
    <string name="time_zone_short_name_EST">EST</string>
    <string name="time_zone_short_name_PST">PST</string>
    <string name="time_zone_short_name_CET">CET</string>
    <string name="time_zone_short_name_WET">WET</string>

    <string-array name="config_time_zone_selection_items">
        <item>-!System default</item>
        <item>GMT!Greenwich Mean Time</item>
        <item>Asia/Tokyo!Japan Standard Time</item>
        <item>America/New_York!Eastern Standard Time</item>
        <item>America/Los_Angeles!Pacific Standard Time</item>
        <item>Europe/Berlin!Central European Standard Time</item>
        <item>Europe/Lisbon!Western European Standard Time</item>
        <item>#!Enter the time difference from GMT</item>
    </string-array>
</resources>