<?xml version="1.0" encoding="utf-8"?>
<!--
MIT License

Copyright (c) 2020 Palmtree Software

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/configBorderColor"
                android:padding="@dimen/config_frame_border_width">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/configForegroundColor"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/config_view_margin"
                        android:text="@string/config_previewregion_label"
                        android:textStyle="bold" />

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/config_view_margin"
                        android:background="@color/configLightFrameBorderColor"
                        android:padding="@dimen/config_frame_border_width">

                        <RelativeLayout
                            android:id="@+id/config_previewregion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/configPreviewLightBackgroundColor"
                            android:orientation="vertical"
                            android:padding="@dimen/config_preview_padding">

                            <TextView
                                android:id="@+id/config_preview_hour_minute"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="99:99"
                                android:textSize="@dimen/config_preview_hour_minute_textsize"
                                tools:ignore="HardcodedText,SpUsage" />

                            <TextView
                                android:id="@+id/config_preview_time_zone_short_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toEndOf="@id/config_preview_hour_minute"
                                android:text="+0300"
                                android:textSize="@dimen/config_preview_time_zone_short_name_text_size"
                                tools:ignore="HardcodedText,SpUsage" />

                            <Space
                                android:id="@+id/config_preview_space_top_of_second"
                                android:layout_width="0dp"
                                android:layout_height="@dimen/config_preview_second_margin_top"
                                android:layout_below="@id/config_preview_time_zone_short_name"
                                android:layout_toEndOf="@id/config_preview_hour_minute" />

                            <TextView
                                android:id="@+id/config_preview_second"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/config_preview_space_top_of_second"
                                android:layout_toEndOf="@id/config_preview_hour_minute"
                                android:text=":99"
                                android:textSize="@dimen/config_preview_second_textsize"
                                tools:ignore="HardcodedText,SpUsage" />

                            <TextView
                                android:id="@+id/config_preview_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="Sun, 01 Jan"
                                android:textSize="@dimen/config_preview_date_textsize"
                                android:layout_below="@id/config_preview_hour_minute"
                                android:layout_centerHorizontal="true"
                                tools:ignore="HardcodedText,SpUsage" />
                        </RelativeLayout>
                    </FrameLayout>
                </LinearLayout>
            </FrameLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="@dimen/config_space_between_flames" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/configBorderColor"
                android:padding="@dimen/config_frame_border_width">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/configForegroundColor">

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/config_view_margin"
                            android:text="@string/config_date_format_label"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/config_date_format"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/config_view_margin"
                            android:layout_weight="1"
                            android:hint="@string/config_date_format_hint"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            tools:ignore="TextFields" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/config_view_margin"
                            android:text="@string/config_foreground_color_label"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/config_foreground_color"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/config_view_margin"
                            android:layout_weight="1"
                            android:hint="@string/config_foreground_color_hint"
                            android:importantForAutofill="no"
                            android:inputType="textVisiblePassword" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="@dimen/config_view_margin"
                            android:text="@string/config_time_zone_label"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <Spinner
                                android:id="@+id/config_timeszne_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:entries="@array/config_time_zone_selection_items" />

                            <LinearLayout
                                android:id="@+id/config_timesone_bynumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:fontFamily="monospace"
                                    android:text="@string/config_timezone_bynumber_gmt_label" />

                                <NumberPicker
                                    android:id="@+id/config_timesone_bynumber_hour"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:fontFamily="monospace"
                                    android:text=":"
                                    tools:ignore="HardcodedText" />

                                <NumberPicker
                                    android:id="@+id/config_timesone_bynumber_minute"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical" />
                            </LinearLayout>
                        </LinearLayout>
                    </TableRow>

                    <TableRow>

                        <Button
                            android:id="@+id/config_reset"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="@dimen/config_view_margin"
                            android:layout_weight="0.5"
                            android:text="@string/config_reset_button" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="0.5" />
                    </TableRow>
                </TableLayout>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/config_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/config_view_margin"
            android:layout_weight="1"
            android:text="@string/config_cancel_button"
            tools:ignore="ButtonStyle" />


        <Button
            android:id="@+id/config_preview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/config_view_margin"
            android:layout_weight="1"
            android:text="@string/config_preview_button"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/config_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/config_view_margin"
            android:layout_weight="1"
            android:text="@string/config_add_widget_button"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>